FP-772: Revert change to `HistoryBadge`
This avoids extra testing and increased scope.

--- a/client/src/components/History/HistoryBadge/HistoryBadge.module.scss
+++ b/client/src/components/History/HistoryBadge/HistoryBadge.module.scss
@@ -3,8 +3,8 @@
     min-width: 1.3em;  /* ~18px design * 1.2 design-to-app ratio (rounded) */
     text-align: center;
     font-size: 0.75em;  /* ~10px design * 1.2 design-to-app ratio */
-    border-radius: 3px;
-    background-color: var(--global-color-accent--normal);
+    border-radius: 3.6px;
+    background-color: #9d85ef;
     color: rgb(253, 241, 241);
     margin-left: auto;
     margin-right: 2em;
