Resolve naming conflict

--- a/client/src/components/Onboarding/OnboardingUser.scss
+++ b/client/src/components/Onboarding/OnboardingUser.scss
@@ -14,8 +14,7 @@
   margin-bottom: 1em;
 }
 
-
-.onboarding-actions {
+.onboarding-actions, .onboarding-processing {
   .loading-icon {
     display: inline-block;
     width: inherit;
