Add disabled property to Sidebar

--- a/client/src/components/Sidebar/Sidebar.module.scss
+++ b/client/src/components/Sidebar/Sidebar.module.scss
@@ -26,3 +26,7 @@ $width: 215px;
   font-size: 0.75em; /* ~20px (16px design * 1.2 design-to-app ratio) */
   font-weight: 500;
 }
+
+.disabled {
+  color: var(--global-color-primary--light);
+}
