--- a/client/src/components/_common/SectionContent/SectionContent.module.css
+++ b/client/src/components/_common/SectionContent/SectionContent.module.css
@@ -9,17 +9,17 @@
 
 /* NOTE: Similar on: SectionContent, SectionTable */
 .should-scroll {
-  /* We want to permit vertical scrolling, without forcing it */
+  /* We want to permit vertical scrolling, without forcing it… can we? */
   /* FAQ: Did not set `overflow: auto`, because that would certainly hide negative-margined sidebar links */
   /* CAVEAT: Setting `overflow-y` still hides the negative-margined sidebar links because `overflow-x: visible` (default) is re-intepreted as `auto` */
   /* SEE: https://stackoverflow.com/a/6433475/11817077 */
   overflow-y: auto;
 }
 .root:not(.should-scroll) {
-  /* We want to disable vertical and horizontal scrolling */
   overflow: hidden;
 }
 
+/* Color-code panels to easily track movement of multiple panels */
 .should-debug::before          { background-color: tomato; }
 .should-debug > *:nth-child(1) { background-color: orchid; }
 .should-debug > *:nth-child(2) { background-color: dodgerblue; }
