--- a/client/src/components/History/HistoryBadge/HistoryBadge.module.scss
+++ b/client/src/components/History/HistoryBadge/HistoryBadge.module.scss
@@ -4,8 +4,12 @@
     text-align: center;
     font-size: 0.75em;  /* ~10px design * 1.2 design-to-app ratio */
     border-radius: 3.6px;
-    background-color: #9d85ef;
+    background-color: var(--global-color-accent--normal);
     color: rgb(253, 241, 241);
     margin-left: auto;
     margin-right: 2em;
+}
+
+.disabled {
+    background-color: var(--global-color-accent--light);
 }
