--- a/client/src/components/Onboarding/OnboardingStep.module.scss
+++ b/client/src/components/Onboarding/OnboardingStep.module.scss
@@ -1,15 +1,20 @@
 
-.onboarding-step {
+.root {
   padding-top: 1em;
   padding-bottom: 1em;
   margin-bottom: 1em;
   border-bottom: 1px solid var(--global-color-primary--normal);
 }
 
-.onboarding-step__name {
+.name {
   font-weight: bold;
 }
 
-.onboarding-step__description {
+.description {
   padding-bottom: 1em;
+}
+
+.status {
+  display: flex;
+  align-items: center;
 }
