--- a/client/src/components/Onboarding/OnboardingActions.module.scss
+++ b/client/src/components/Onboarding/OnboardingActions.module.scss
@@ -5,10 +5,10 @@
 }
 
 .action {
-  padding-bottom: 0px;
-  padding-top: 0px;
+  padding-bottom: 0;
+  padding-top: 0;
   h6 {
-    margin-top: 0px;
-    margin-bottom: 0px;
+    margin-top: 0;
+    margin-bottom: 0;
   }
 }
