Bring in space css vars for sections and apply to onboardinguser

--- a/client/src/components/Onboarding/OnboardingUser.module.scss
+++ b/client/src/components/Onboarding/OnboardingUser.module.scss
@@ -1,5 +1,7 @@
+@import url('../../styles/settings/space.css');
+
 .root {
-  padding: 1em 1em 1em 1em;
+  padding: var(--global-space--section);
 }
 
 .access {
