--- a/client/src/components/Onboarding/OnboardingActions.module.scss
+++ b/client/src/components/Onboarding/OnboardingActions.module.scss
@@ -1,4 +1,3 @@
-
 .root {
   display: flex;
   align-items: center;
@@ -7,9 +6,5 @@
 .action {
   padding-bottom: 0;
   padding-top: 0;
-  h6 {
-    margin-top: 0;
-    margin-bottom: 0;
-  }
+  font-weight: 500;
 }
-
