--- a/server/portal/templates/includes/navigation.html
+++ b/server/portal/templates/includes/navigation.html
@@ -54,7 +54,7 @@ They seem useful, and would be re-incoprorated when their usage is necessary.
             <a class="dropdown-item" href="{% url 'workbench:dashboard' %}">
               <i class="fas fa-desktop nav-icon"></i> My Dashboard
             </a>
-            <a class="dropdown-item" href="{% url 'portal_accounts:manage_profile' %}">
+            <a class="dropdown-item" href="{% url 'workbench:account' %}">
               <i class="fas fa-user-circle nav-icon"></i> My Account
             </a>
             <a class="dropdown-item" href="{% url 'portal_accounts:logout' %}">
