--- a/client/src/components/_common/Message/Message.module.scss
+++ b/client/src/components/_common/Message/Message.module.scss
@@ -31,53 +31,74 @@
 
 /* Modifiers */
 
+
 /* Modifiers: Type */
 
-.is-info {
-  color: var(--global-color-primary--x-dark);
-}
-.is-warn {
-  color: var(--global-color-warning--alt);
-}
-.is-error {
-  color: var(--global-color-danger--normal);
-}
-.is-success {
-  padding: 0.5rem 1rem;
-  border: var(--global-border-width--normal) solid var(--global-color-success--alt);
-
-  & .icon {
-    margin-right: 1rem;
-
-    color: var(--global-color-success--alt);
-  }
-}
-
-/* WARNING: Accessibility solution originating from of lack of design */
-/* FAQ: Can not explicitely declare `.wb-link`, because its a global class */
-/* Avoid clash of red text and purple `.wb-link` */
-.is-error {
-  & a {
-    color: var(--global-color-danger--normal) !important /* override overly-specific `.workbench-content .wb-link` */;
-  }
-}
-/* Distinguish text and `.wb-link`, and link states default and hover */
-.is-warn,
-.is-error {
-  & a {
-    text-decoration-line: underline;
-  }
-  & a:hover {
-    text-decoration-style: double;
-  }
-}
+.is-info .icon { /* … */ }
+.is-warn .icon { color: var(--global-color-warning--alt); }
+.is-error .icon { color: var(--global-color-danger--normal); }
+.is-success .icon { color: var(--global-color-success--alt); }
 
 
 /* Modifiers: Scope */
 
 .is-scope-inline {
-  /* … */
+  &.is-info { /* … */ }
+  &.is-warn { color: var(--global-color-warning--alt); }
+  &.is-error { color: var(--global-color-danger--normal); }
+  &.is-success { /* … */ }
 }
+
 .is-scope-section {
-  /* … */
+  padding: 0.5rem 1rem;
+  border-width: var(--global-border-width--normal);
+  border-style: solid;
+
+  /* Children */
+  & .icon {
+    margin-right: 1rem;
+  }
+
+  /* Modifiers */
+  &.is-info {
+    & .icon { /* … */ }
+    border-color: var(--global-color-info--normal);
+    background-color: var(--global-color-info--weak);
+  }
+  &.is-warn {
+    & .icon { color: var(--global-color-warning--normal); }
+    border-color: var(--global-color-warning--normal);
+    background-color: var(--global-color-warning--weak);
+  }
+  &.is-error {
+    & .icon { color: var(--global-color-danger--normal); }
+    border-color: var(--global-color-danger--normal);
+    background-color: var(--global-color-danger--weak);
+  }
+  &.is-success {
+    & .icon { color: var(--global-color-success--alt); }
+    border-color: var(--global-color-success--alt);
+    background-color: var(--global-color-success--alt-weak);
+  }
+}
+
+
+/* Modifiers: Complex */
+
+.is-scope-inline {
+  /* WARNING: This accessibility solution is only because of lack of design */
+  /* FAQ: Can not explicitely declare `.wb-link`, because its a global class */
+  /* Avoid clash of red text and purple `.wb-link` */
+  .is-error a {
+    color: var(--global-color-danger--normal) !important /* override overly-specific `.workbench-content .wb-link` */;
+  }
+  /* Distinguish text and `.wb-link`, and link states default and hover */
+  .is-warn a,
+  .is-error a {
+    text-decoration-line: underline;
+  }
+  .is-warn a:hover,
+  .is-error a:hover {
+    text-decoration-style: double;
+  }
 }
