FP-639: Dismissal & Styles & more
- Manage dismissal internally.
- Manage dismissal externally (untested).
- Allow more customization per scope.
- Update styles.

--- a/client/src/components/UIPatterns/UIPatternsMessage/UIPatternsMessage.module.scss
+++ b/client/src/components/UIPatterns/UIPatternsMessage/UIPatternsMessage.module.scss
@@ -21,6 +21,7 @@
     & thead tr:not(:first-child):not(:last-child) th { border-bottom-width: 0; }
 
     ul { margin: 0; }
+    [role="status"] + [role="status"] { margin-top: 0.5em; }
 }
 th.secondary {
     font-weight: normal;
