--- a/client/src/components/UIPatterns/UIPatternsMessage/UIPatternsMessage.module.scss
+++ b/client/src/components/UIPatterns/UIPatternsMessage/UIPatternsMessage.module.scss
@@ -1,7 +1,7 @@
-/* Align vertical lists left-to-right, or top-to-bottom */
 .container {
     width: 100%;
 
+    /* Skin */
     & th,
     & td {
         padding: 0.5em;
@@ -9,10 +9,18 @@
         border-style: solid;
     }
 
+    /* Aligment */
+    & thead th,
+    & thead td {
+        vertical-align: top;
+    }
+
+    /* Dimension */
     & tbody > *:nth-child(1) { width: 20%; }
     & tbody > *:nth-child(2) { width: 40%; }
     & tbody > *:nth-child(2) { width: 40%; }
 
+    /* Tweak Borders */
     & tr td:last-child,
     & tr th:last-child { border-right-width: 0; }
     & .is-row-end,
@@ -20,11 +28,14 @@
     & tbody tr:last-child th,
     & thead tr:not(:first-child):not(:last-child) th { border-bottom-width: 0; }
 
+    /* Tweak Spacing */
     ul { margin: 0; }
     [role="status"] + [role="status"] { margin-top: 0.5em; }
 }
-th.secondary {
-    font-weight: normal;
-}
+
+/* Typography */
+th.secondary { font-weight: normal; }
+
+/* Unique Alignment */
 tr:not(:last-child) th.secondary { text-align: right; }
 tr:last-child th.secondary { vertical-align: bottom; }
