FP-186: Minor: Rename variables, functions, classes
- Use less explicit names.
- Use standard CSS module root element class name.
- Remove unused import.

--- a/client/src/components/FeedbackForm/FeedbackModal.module.scss
+++ b/client/src/components/FeedbackForm/FeedbackModal.module.scss
@@ -1,4 +1,4 @@
-.feedback-modal {
+.container {
   a {
     color: #9d85ef;
   }
@@ -7,7 +7,7 @@
     max-width: 600px;
   }
 }
-.feedback-header {
+.header {
   background-color: #f4f4f4;
   color: #484848;
   font-size: 1.25rem;
