--- a/client/src/components/_common/SectionContent/SectionContent.layouts.module.css
+++ b/client/src/components/_common/SectionContent/SectionContent.layouts.module.css
@@ -67,10 +67,22 @@
   }
 
   /* Create a fake column border */
+  /* NOTE: A utility class has not been created, because:
+           - This is used in a media query, which `composes` does not support.
+           - This flex-based layout, thus this one use case, is temporary. */
   .two-column {
-    composes: u-create-flex-item-as-border--vert from '../../../styles/trumps/u-create-flex-item-as-border.css';
+    /* Allow border to stretch (in Webkit) */
+    /* FAQ: Child (the border) size percentage requires parent (flex box) to have definite size (see https://stackoverflow.com/a/33644245) */
+    /* WARNING: If parent element of this has `flex-wrap: wrap`, then this will stretch just like the border */
+    height: 100%;
   }
   .two-column::before {
+    /* structure */
+    content: '';
+    height: 100%;
+    width: 0;
+
+    /* skin */
     order: var(--side-panel-order);
     border-right: 1px solid rgba(112, 112, 112, 0.25);
     margin-left: var(--gutter-width);
