FP-385: Fix (In)FiniteScrollTable table/col widths

--- a/client/src/components/Applications/AppLayout/AppLayout.scss
+++ b/client/src/components/Applications/AppLayout/AppLayout.scss
@@ -1,4 +1,4 @@
-/* Global */
+/* External */
 
 /* Allow space for all elements to be visible and usable */
 /* FAQ: Edit global style based on section-specific caveat */
@@ -10,7 +10,7 @@ body.has-loaded-applications {
 
 
 
-/* Local */
+/* Internal */
 /* TODO: Migrate to CSS Modules */
 
 .apps-content {
