--- a/client/src/components/DataFiles/DataFiles.css
+++ b/client/src/components/DataFiles/DataFiles.css
@@ -1,4 +1,4 @@
-/* Global */
+/* External */
 
 /* Avoid Data Files header buttons colliding with header text */
 /* FAQ: Edit global style based on section-specific caveat */
