--- a/client/src/components/History/History.module.scss
+++ b/client/src/components/History/History.module.scss
@@ -1,6 +1,15 @@
-/*
-    Components
-*/
+/* External */
+
+body.has-loaded-history {
+    /* HACK: Should instead (ask Design) have a responsive sidebar(s) */
+    --min-width: 930px; /* just before table column values overflow */
+}
+
+
+
+/* Internal */
+
+/* Children */
 .header {
     button {
         padding: 0;
