--- a/client/src/components/Tickets/TicketsLayout.scss
+++ b/client/src/components/Tickets/TicketsLayout.scss
@@ -6,19 +6,30 @@
   font-family: monospace;
 }
 
-.tickets-view {
-  /* Ticket Number */
-  th:nth-child(1),
-  td:nth-child(1) { min-width: 5em; }
-  /* Subject */
-  th:nth-child(2),
-  td:nth-child(2) { width: 80%; }
-  /* Date */
-  th:nth-child(3),
-  td:nth-child(3) { width: 20%; }
-  /* Status */
-  th:nth-child(4),
-  td:nth-child(4) { min-width: 10em; }
+/* WARNING: Custom standard breakpoint: 1679px / 1680px */
+@media only screen and (min-width: 1680px) {
+  .tickets-view {
+    /* Number */  tr > *:nth-child(1) { width: 7.5%; }
+    /* Subject */ tr > *:nth-child(2) { width: 75%; }
+    /* Date */    tr > *:nth-child(3) { width: 10%; }
+    /* Status */  tr > *:nth-child(4) { width: 12.5%; }
+  }
+}
+@media only screen and (min-width: 992px) and (max-width: 1679px) {
+  .tickets-view {
+    /* Number */  tr > *:nth-child(1) { width: 12.5%; }
+    /* Subject */ tr > *:nth-child(2) { width: 52.5%; }
+    /* Date */    tr > *:nth-child(3) { width: 20%; }
+    /* Status */  tr > *:nth-child(4) { width: 15%; }
+  }
+}
+@media only screen and (max-width: 991px) {
+  .tickets-view {
+    /* Number */  tr > *:nth-child(1) { width: 10%; }
+    /* Subject */ tr > *:nth-child(2) { width: 55%; }
+    /* Date */    tr > *:nth-child(3) { width: 20%; }
+    /* Status */  tr > *:nth-child(4) { width: 15%; }
+  }
 }
 
 .ticket__error {
