--- a/client/src/styles/settings/color.css
+++ b/client/src/styles/settings/color.css
@@ -3,6 +3,14 @@
 /* Usage: `var(--global-color-primary--normal)` */
 /* SEE: https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_custom_properties */
 
+/* Modifers
+    --normal:   standard color
+    --alt:      alternate color
+    --weak:     transparent instance
+    --(…)light: lighter value
+    --(…)dark:  darker value
+*/
+
 :root {
     /* Primary i.e. Grayscale */
     --global-color-primary--xx-light: #FFFFFF;
@@ -19,15 +27,21 @@
 
     /* Distinct Hues */
     --global-color-accent--normal: #9D85EF;
-        /* TODO: Use `--light` not `--light-hack` (search for manual instances */
-        --global-color-accent--light-hack: #9D85EF40; /* Not used, yet. Equals `--normal` @ 25% opacity */
+        --global-color-accent--weak: #9D85EF20;
         --global-color-accent--light: #dfdaf5;
         --global-color-accent--x-light: #D2CCE7;
+    --global-color-info--normal: var(--global-color-primary--x-dark);
+        --global-color-info--weak: var(--global-color-primary--x-light);
     --global-color-success--normal: #43D130;
-        --global-color-success--alt: #C7CE1D;
+        --global-color-success--weak: #43D13020;
+        --global-color-success--alt: var(--global-color-warning--normal);
+        --global-color-success--alt-weak: var(--global-color-warning--weak);
     --global-color-warning--normal: #C7CE1D;
-        --global-color-warning--alt: #9D85EF;
+        --global-color-warning--weak: #C7CE1D20;
+        --global-color-warning--alt: var(--global-color-accent--normal);
+        --global-color-warning--alt-weak: var(--global-color-accent--weak);
     --global-color-danger--normal: #EB6E6E;
+        --global-color-danger--weak: #EB6E6E20;
 
     /* Common */
     --global-color-background--app: var(--global-color-primary--xx-light);
