--- a/client/src/components/Sidebar/Sidebar.module.scss
+++ b/client/src/components/Sidebar/Sidebar.module.scss
@@ -27,6 +27,11 @@ $width: 215px;
   font-weight: 500;
 }
 
+.feedback-nav-item {
+  align-self: center;
+  margin-top: auto;
+  margin-bottom: 1em;
+}
 .disabled {
   color: var(--global-color-primary--light);
 }
