FP-363: Update paths to assets (and a comment)

--- a/server/portal/templates/includes/navigation.html
+++ b/server/portal/templates/includes/navigation.html
@@ -1,7 +1,7 @@
 {# NOTE: Removed references to unused settings #}
 {# WARNING: Some markup is duplicated in other repositories #}
 {# SEE: https://confluence.tacc.utexas.edu/x/LoCnCQ #}
-{# FAQ: Extra space added to make easier a comparison with CMS template #}
+{# FAQ: Extra lines exist to ease CMS/Portal/Guide template comparison #}
 
 
 <!-- Sponsor Logos -->
