move error message in push keys modal

--- a/client/src/components/DataFiles/DataFilesSidebar/DataFilesSidebar.scss
+++ b/client/src/components/DataFiles/DataFilesSidebar/DataFilesSidebar.scss
@@ -33,6 +33,10 @@ $frontera-portal-color-primary: #9d85ef;
   border-radius: 0;
 }
 
+.data-files-footer-msg {
+  flex-grow: 1;
+}
+
 #data-files-add {
   width: 140px;
 }
