FP-363: Migrate CMS markup script to CMS

--- a/server/portal/templates/includes/nav_cms.html
+++ b/server/portal/templates/includes/nav_cms.html
@@ -1,28 +1,12 @@
 {# @var className #}
 
-
+{# RFE: Use a custom element or React component whose code exists in one repo #}
 {# WARNING: Some markup is duplicated in other repositories #}
 {# SEE: https://confluence.tacc.utexas.edu/x/LoCnCQ #}
 <ul class="s-cms-nav  {{ className }}" id="cms-nav-pages" data-cms-nav-endpoint="/cms/nav/pages/markup/">
+
   <!-- All top-level CMS controlled nav elements handled here. -->
   {# FAQ: Content populated via JavaScript, below #}
-</ul>
-{# RFE: Use `insertAdjacentHTML` (not `innerHTML`) to replace placeholder markup with desired markup #}
-<script>
-  (function includeCMSPagesHTML() {
-    const cmsPagesElement = document.getElementById("cms-nav-pages");
-    const cmsPagesEndpoint = cmsPagesElement && cmsPagesElement.dataset.cmsNavEndpoint;
 
-    if (cmsPagesEndpoint) {
-      fetch(cmsPagesEndpoint).then((response) => {
-        return response.text();
-      }).then((data) => {
-        cmsPagesElement.innerHTML = data;
-      }, (err) => {
-        cmsPagesElement.innerHTML = null;
-      }).finally(() => {
-        cmsPagesElement.removeAttribute("data-cms-nav-endpoint");
-      });
-    }
-  })();
-</script>
+</ul>
+<script src="/static/site_cms/js/nav_cms.js"></script>
