FP-363: Add missing sponsor logo

--- a/server/portal/templates/includes/navigation.html
+++ b/server/portal/templates/includes/navigation.html
@@ -9,13 +9,13 @@
 
 
 
-
-
+        <a href="https://www.nsf.gov/" target="">
+          <img class="branding-logo branding-nsf" src="/static/site_cms/img/org_logos/nsf-white.png" crossorigin="anonymous" alt="NSF Logo">
+        </a>
+        <span class="branding-seperator"></span>
         <a href="https://www.tacc.utexas.edu/" target="">
           <img class="branding-logo branding-tacc" src="/static/site_cms/img/org_logos/tacc-white.png" crossorigin="anonymous" alt="TACC Logo">
         </a>
-
-
         <span class="branding-seperator"></span>
         <a href="https://www.utexas.edu/" target="">
           <img class="branding-logo branding-utaustin" src="/static/site_cms/img/org_logos/utaustin-white.png" crossorigin="anonymous" alt="University of Texas at Austin Logo">
