Proptypes and unit tests

--- a/client/src/components/DataFiles/DataFilesProjectMembers/DataFilesProjectMembers.module.scss
+++ b/client/src/components/DataFiles/DataFilesProjectMembers/DataFilesProjectMembers.module.scss
@@ -6,6 +6,13 @@
   text-transform: capitalize;
 }
 
+.remove-member {
+  h6 {
+    margin-bottom: 0;
+    font-size: 1.035em;
+  }
+}
+
 .member-search {
   margin-bottom: 1em;
 }
