--- a/client/src/components/DataFiles/DataFilesProjectFileListing/DataFilesProjectFileListing.module.scss
+++ b/client/src/components/DataFiles/DataFilesProjectFileListing/DataFilesProjectFileListing.module.scss
@@ -1,5 +1,7 @@
 .root {
-  display: block;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .title-bar {
@@ -23,7 +25,7 @@
 .edit {
   padding-top: 0;
   padding-bottom: 0;
-  padding-right: 0px;
+  padding-right: 0;
 }
 
 .separator {
