--- a/client/src/components/DataFiles/DataFilesProjectMembers/DataFilesProjectMembers.module.scss
+++ b/client/src/components/DataFiles/DataFilesProjectMembers/DataFilesProjectMembers.module.scss
@@ -6,7 +6,7 @@
   text-transform: capitalize;
 }
 
-.remove-member {
+.member-action {
   h6 {
     margin-bottom: 0;
     font-size: 1.035em;
@@ -33,6 +33,30 @@
   td:nth-child(3) {
     width: 10em;
   }
+}
+
+.transfer-list {
+  /* owner */
+  th:nth-child(1),
+  td:nth-child(1) {
+    width: 50%;
+  }
+  /* confirmation */
+  th:nth-child(2),
+  td:nth-child(2) {
+    min-width: 50%;
+  }
+}
+
+.confirm-controls {
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.confirm-controls > * {
+  margin-left: 1em;
 }
 
 .add-button {
