Showing File Listing all the times for Full Size view. Setting props for Modal Window layouts.

--- a/client/src/components/DataFiles/DataFilesModals/DataFilesUploadModal.module.scss
+++ b/client/src/components/DataFiles/DataFilesModals/DataFilesUploadModal.module.scss
@@ -1,11 +1,15 @@
 /* Types */
 .container {
-}
-.is-horz {
-}
-.is-vert {
-}
-.is-wide {
-}
-.is-narrow {
+  &.is-horz {
+    &.is-wide {
+    }
+    &.is-narrow {
+    }
+  }
+  &.is-vert {
+    &.is-wide {
+    }
+    &.is-narrow {
+    }
+  }
 }
