--- a/server/portal/apps/workbench/templates/portal/apps/workbench/index.j2
+++ b/server/portal/apps/workbench/templates/portal/apps/workbench/index.j2
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load staticfiles %}
+{% load static %}
 {% block title %} Workbench {% endblock %}
 {% block head_extra %}
   <base href="{% url 'workbench:index' %}">
