spacing between user search and member list

--- a/client/src/components/DataFiles/DataFilesProjectMembers/DataFilesProjectMembers.module.scss
+++ b/client/src/components/DataFiles/DataFilesProjectMembers/DataFilesProjectMembers.module.scss
@@ -6,6 +6,10 @@
   text-transform: capitalize;
 }
 
+.user-search {
+  margin-bottom: 1em;
+}
+
 .member-action {
   display: flex;
   align-items: center;
