--- a/client/src/components/DataFiles/DataFilesSidebar/DataFilesSidebar.scss
+++ b/client/src/components/DataFiles/DataFilesSidebar/DataFilesSidebar.scss
@@ -6,6 +6,7 @@ $frontera-portal-color-primary: #9d85ef;
   background: #ffffff;
   padding-top: 10px;
   border-right: 1px solid rgba(112, 112, 112, 0.25);
+  height: 100%;
 }
 
 .data-files-sidebar .nav-link {
