Support confirmation workflow from ui design

--- a/client/src/components/DataFiles/DataFilesModals/DataFilesLinkModal.module.scss
+++ b/client/src/components/DataFiles/DataFilesModals/DataFilesLinkModal.module.scss
@@ -1,7 +1,17 @@
-.action-root {
-  margin-right: 0.5em;
+.action {
+  margin-left: 0.5em;
 }
 
 .controls {
   margin-top: 0.5em;
+}
+
+.help-text {
+  color: #AFAFAF;
+  font-style: italic;
+  font-size: 12px;
+}
+
+.warning {
+  margin-right: 1em;
 }
